--- a/pom.xml
+++ b/pom.xml
@@ -1,10 +1,10 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
-    <modelVersion>4.0.0</modelVersion>
+    <modelVersion>4.0.0 </modelVersion>
 
     <groupId>com.aventstack</groupId>
     <artifactId>extentreports</artifactId>
-    <version>3.1.5</version>
+    <version>3.1.5-TEST</version>
     <packaging>jar</packaging>
 
     <name>ExtentAPI Community Version</name>
@@ -19,9 +19,9 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
     </licenses>
     
     <scm>
-        <connection>scm:git:https://github.com/anshooarora/extentreports-java.git</connection>
-        <developerConnection>scm:git:https://github.com/anshooarora/extentreports-java.git</developerConnection>
-        <url>https://github.com/anshooarora/extentreports-java</url>
+        <connection>scm:git:https://github.com/i2ijeya/extentreports-java.git</connection>
+        <developerConnection>scm:git:https://github.com/i2ijeya/extentreports-java.git</developerConnection>
+        <url>https://github.com/i2ijeya/extentreports-java</url>
     </scm>
     
     <developers>
@@ -68,7 +68,7 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.8.0</version>
+			<version>2.8.5</version>
 		</dependency>
         <dependency>
             <groupId>org.testng</groupId>
